MWE is now working

--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -9,22 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import custom_ipywidget_example"
+    "import myproject"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5632c1ee1e004338aa938ef683f784bc",
+       "model_id": "708bca4a8e5949e99a816ce47a01a462",
        "version_major": 2,
        "version_minor": 0
       },
@@ -32,14 +32,23 @@
        "ExampleWidget()"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w = custom_ipywidget_example.ExampleWidget()\n",
+    "w = myproject.ExampleWidget()\n",
     "w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert w.value == 'Hello World'"
    ]
   },
   {
@@ -47,9 +56,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "assert w.value == 'Hello World'"
-   ]
+   "source": []
   }
  ],
  "metadata": {
